--- a/PQR.html
+++ b/PQR.html
@@ -39,8 +39,8 @@
     
             <div class="text">
                 <p>Antes de responder este formuario, tenga en cuenta los siguientes conceptos:</p>
-                <p><span>Pregunta:</span> Es una consulta hechas a razón de la necesidad de información puntual sobre servicios y otros productos ofrecidos por la Organización o sus procesos.</p>
-                <p><span>Petición:</span> Es...</p>
+                <p><span>Pregunta:</span> Es una consulta hecha a razón de la necesidad de información puntual sobre servicios ofrecidos por la Organización o sus procesos.</p>
+                <p><span>Petición:</span> Es una actuación por medio de la cual el usuario, de manera respetuosa, solicita a la empresa cualquier información relacionada con la prestación del servicio.</p>
                 <p><span>Queja:</span> Es una manifestación de insatisfacción con alguna de nuestras actuaciones o protesta que se hace a causa de un desacuerdo o inconformidad.</p>
                 <p><span>Reclamo:</span> Es una solicitud o exigencia de un derecho vulnerado como consecuencia del incumplimiento o irregularidad de alguna de las características de los servicios ofrecidos por la institución.</p>
                 <p><span>Sugerencia:</span> Es la aportación de ideas, iniciativas que tiene como propósito mejorar la prestación del servicio en cualquiera de las áreas de la Institución.</p>
