--- a/PQR.html
+++ b/PQR.html
@@ -48,7 +48,7 @@
                 <p><span>Denuncia:</span> Es la acción en que se comunica, informa o da aviso sobre el conocimiento de hechos o conductas irregulares que impliquen un eventual detrimento de los bienes o recursos, así como las faltas frente a personas y su integridad o la de la Organización.</p>
             </div>
     
-            <form action="https://formsubmit.co/c046d07c09e5d96950299a3de8126a91" method="POST" class="form" id="form" netlify>
+            <form method="POST" class="form" id="form" netlify>
                 <div class="form__name">
                     <label for="name">Nombre completo:</label>
                     <input type="text" placeholder="Escribe tu nombre completo" id="name" name="name">
