--- a/ingresar.html
+++ b/ingresar.html
@@ -36,7 +36,7 @@
         <div class="containerForm sign-up">
             <div class="welcome-back">
                 <div class="message message2">
-                    <h2>Bienvenid@ de nuevo</h2>
+                    <h2>Bienvenid@ a villa del parque</h2>
                     <p>¿Ya tienes una cuenta?</p>
                     <button class="btnCambio signInBtn">Iniciar Sesion</button>
                 </div>
@@ -90,7 +90,7 @@
             </form>
             <div class="welcome-back">
                 <div class="message message1">
-                    <h2>Bienvenido a Villa del Parque</h2>
+                    <h2>Bienvenid@ de nuevo</h2>
                     <p>¿Aún no tienes cuenta?</p>
                     <button class="btnCambio signUpBtn">Registrarse</button>
                 </div>
