--- a/miCuenta.html
+++ b/miCuenta.html
@@ -78,6 +78,10 @@
             <div class="editPorfile">
                 <a href="#">Editar perfil</a>
             </div>
+
+            <div>
+                <a href="/ingresar.html">Cerrar sesión</a>
+            </div>
         </div>
     </main>
 
