--- a/ingresar.html
+++ b/ingresar.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="formContainer">
                     <div class="form__name">
-                        <label for="name">Nombre: </label>
+                        <label for="name">Nombre completo: </label>
                         <input type="text" id="name" name="name" placeholder="Ingresa tu nombre">
                     </div>
                     <div class="form__phone">
@@ -77,12 +77,12 @@
                     <h1 class="title">Iniciar Sesión</h1>
                 </div>
                 <div class="form__email">
-                    <label for="email1">Email: </label>
-                    <input type="email" id="email1" placeholder="tunombre@gmail.com">
+                    <label for="email2">Email o nombre completo: </label>
+                    <input type="email" id="email2" placeholder="tunombre@gmail.com">
                 </div>
                 <div class="form__password">
-                    <label for="password1">Contraseña: </label>
-                    <input type="password" id="password1" placeholder="Ingresa tu contraseña">
+                    <label for="password2">Contraseña: </label>
+                    <input type="password" id="password2" placeholder="Ingresa tu contraseña">
                 </div>
                 <div class="form__login">
                     <button type="submit" name="submit1" id="btnIS" class="btnSubmit">Iniciar Sesion</button>
