--- a/miCuenta.html
+++ b/miCuenta.html
@@ -33,8 +33,10 @@
 
     <main>
         <div class="container">
-            <h2>Mi cuenta</h2>
             <h1 class="title">Hola!</h1>
+            <div class="btnCerrarSesion">
+                <a href="/ingresar.html">Cerrar sesión</a>
+            </div>
             <p>¡Paga tus facturas facilmente!</p>
             <p>Desde aquí podrás ver tu historial de pagos.</p> 
 
@@ -71,7 +73,7 @@
                     </tbody>
                 </table>
             </div>
-            <div>
+            <div class="btnVerMas">
                 <a href="#">Ver más</a>
             </div>
 
@@ -79,9 +81,7 @@
                 <a href="#">Editar perfil</a>
             </div>
 
-            <div>
-                <a href="/ingresar.html">Cerrar sesión</a>
-            </div>
+            
         </div>
     </main>
 
