--- a/miCuenta.html
+++ b/miCuenta.html
@@ -74,7 +74,7 @@
                 </table>
             </div>
             <div class="btnVerMas">
-                <a href="#">Ver más</a>
+                <a href="#" id="btnVerMas">Ver más</a>
             </div>
 
             <div class="editPorfile">
@@ -85,6 +85,7 @@
         </div>
     </main>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/miCuenta/js/miCuenta.js"></script>
 </body>
 </html>
